# daisy-ohos

./: .gitignore  LICENSE  Makefile  README.md  hvigorfile.ts
.github/workflows/: Build.yaml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
daisy_native/: Cargo.toml  Makefile
daisy_native/package/: README.md  index.ets  oh-package.json5
daisy_native/package/src/main/: module.json5
daisy_native/src/: api.rs  context.rs  download_thread.rs  lib.rs
daisy_native/src/anime_home/: client.rs  entities.rs  proto.rs
daisy_native/src/database/: mod.rs
daisy_native/src/database/cache/: web_cache.rs
daisy_native/src/database/download/: download_comic.rs
entry/: oh-package-lock.json5  oh-package.json5  patch.json
entry/libs/: oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Home.ets  Index.ets  Login.ets  Manga.ets  MangaHistories.ets  MangaInfo.ets  MangaReader.ets  MangaSubscribed.ets  Novel.ets  NovelHistories.ets  NovelInfo.ets  NovelReader.ets  NovelSubscribed.ets  Persion.ets
entry/src/main/ets/pages/components/: CachedImage.ets  Context.ets  Error.ets  Loading.ets  MangaCard.ets  MangaList.ets  MaterialIcons.ets  MaterialIconsCodePoints.ets  Nav.ets  Nothing.ets  NovelCard.ets  NovelList.ets  Themes.ets
