[package]
name    = "daisy_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "1.0.1", default-features = false, features = [
    "napi8",
    "async",
] }
napi-derive-ohos = { version = "1.0.1" }
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
async_once = "0.2.6"
base64 = "0.22.1"
bytes = "1.10.1"
futures-util = "0.3.31"
hex = "0.4.3"
image = { version = "0.25.5", features = ["jpeg", "gif", "webp", "bmp", "png"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
md5 = "0.7.0"
num-iter = "0.1.45"
once_cell = "1.21.1"
prost = "0.13.5"
prost-types = "0.13.5"
regex = "1.11.1"
rsa = "0.9.8"
rust-crypto = "0.2.36"
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"
serde_path_to_error = "0.1.17"
tokio = { version = "1.44.1", features = ["full"] }
sea-orm = { version = "1.1.7", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"], default-features = false }
reqwest = { version = "0.12.14", default-features = false, features = ["json", "gzip", "deflate", "cookies", "socks", "stream", "rustls-tls-native-roots", "rustls-tls"] }

[build-dependencies]
napi-build-ohos = { version = "1.0.1" }

[profile.release]
lto = true
